# smarthub_operations

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
backend/: .dockerignore  auth.py  main.py  requirements.txt
chatbot/: BotBrain.py  Dockerfile  requirements.txt
docs/: api.md  deployment.md  installation.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: Chatbot.tsx  OperationsMap.tsx  ProtectedRoute.tsx  leafletIconFix.ts
frontend/src/context/: AuthContext.tsx
frontend/src/layout/: AppHeader.tsx  AppSidebar.tsx
frontend/src/pages/: Analytics.tsx  DashboardHome.tsx  Documents.tsx  Login.tsx  OperationsView.tsx  VendorManagement.tsx
frontend/src/styles/: sidebar.css  theme.css
scripts/: deploy.sh  setup.sh  test.sh
src/: __init__.py  main.py
src/config/: settings.py
src/utils/: logger.py
tests/: conftest.py
tests/integration/: test_integration_example.py
tests/unit/: test_example.py
